gtw-class.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: nginx-gateway-class
spec:
  controllerName: "k8s.io/nginx"  # Ajuste conforme o controlador utilizado
