blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-dep-poloni
  labels:
    app: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-blue-poloni
  template:
    metadata:
      labels:
        app: ingress-blue-poloni
        color: blue
    spec:
      tolerations:
      - key: "workload-type"
        operator: "Equal"
        value: "unix"
        effect: "NoSchedule"
      containers:
      - name: servicedemo
        image: acrcorpsharedtim1.azurecr.io/servicedemo:1.0
        ports:
        - containerPort: 80
          protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
          - name: podinfo
            mountPath: /etc/podinfo

      volumes:
      - name: podinfo
        downwardAPI:
          items:
          - path: "labels"
            fieldRef:
              fieldPath: metadata.labels
          - path: "annotations"
            fieldRef:
              fieldPath: metadata.annotations
