gtw.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector  # Permite que os HTTPRoutes sejam criados em namespaces selecionados
          selector:
            matchLabels:
              app: ingreess-demo  # Ajuste isso conforme sua aplicação
